updated spark